--- a/portfolio.html
+++ b/portfolio.html
@@ -34,22 +34,18 @@
                 </ul>
             </nav>
             <ul class="contacts-list list">
-                    <li class="header-contacts-item">
-                        <a class="header-contacts-link main-link link" href="">
-                            <svg width="16" height="12" class="header-contacts-icon">
-                                <use href="./images/sprite.svg#icon-envelope"></use>
-                            </svg>
-                            <a class="contacts-link main-link mail link"
-                                href="mailto:info@devstudio.com">info@devstudio.com</a>
-                        </a>
-                    </li>
-                    <li class="header-contacts-item">
-                        <a class="header-contacts-link main-link link" href="">
-                            <svg width="10" height="16" class="header-contacts-icon">
-                                <use href="./images/sprite.svg#icon-smartphone"></use>
-                            </svg>
-                        <a class="contacts-link main-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-                    </li>
+                <li class="header-contacts-item">
+                    <a class="contacts-link main-link mail link" href="mailto:info@devstudio.com">
+                        <svg width="16" height="12" class="header-contacts-icon">
+                            <use href="./images/sprite.svg#icon-envelope"></use>
+                        </svg>info@devstudio.com</a>
+                </li>
+                <li class="header-contacts-item">
+                    <a class="contacts-link main-link link" href="tel:+380961111111"><svg width="10" height="16"
+                            class="header-contacts-icon">
+                            <use href="./images/sprite.svg#icon-smartphone"></use>
+                        </svg>+38 096 111 11 11</a>
+                </li>
             </ul>
         </div>
     </header>
